Ticking changes: ticking pool now correctly handle mutable Tickables, finalize() replaced by sun.misc.Cleaner, all tickables now cached